--- a/client/1c-formr-net/package.json
+++ b/client/1c-formr-net/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
   },
 
-  "homepage": "/formr-net",
+  "homepage": "/",
 
   "scripts": {
     "start": "..\\node_modules\\.bin\\react-scripts  start",
