--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "first-react-apps",
-  "description": "Installs client modules for developing apps with React",
+  "name": "formr-net",
+  "description": "Installs client modules for formr.net",
   "version": "0.01.010",
   "author": "8020data",
   "license": "ISC",
