--- a/client/1c-formr-net/package.json
+++ b/client/1c-formr-net/package.json
@@ -6,12 +6,11 @@
   "dependencies": {
   },
 
-  "homepage": "/",
 
   "scripts": {
     "start": "..\\node_modules\\.bin\\react-scripts  start",
     "eject": "..\\node_modules\\.bin\\react-scripts  eject",
-    "build": "set PUBLIC_URL=/formr-net&& ..\\node_modules\\.bin\\react-scripts  build",
+    "build": "..\\node_modules\\.bin\\react-scripts  build",
     "test": "..\\node_modules\\.bin\\react-scripts  test",
     "prod": "node serveProd.js 51165",
     "deploy": "bash deploy.sh"
